# SparkEngine

./: .gitignore  .gitmodules  README.md
Spark/: .gitignore
Spark/Spark/: CMakeLists.txt
Spark/Spark/include/: Application.h  Color.h  Display.h  ElementBuffer.h  IndexBuffer.h  OpenGLError.h  Renderer.h  Shader.h  ShaderUtility.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Spark/Spark/include/glad/: gl.h  glad.h
Spark/Spark/resources/shaders/: Basic.shader  defaultShader.fragment
Spark/Spark/src/: Main.cpp
Spark/Spark/src/Core/: Application.cpp
Spark/Spark/src/Core/Display/: Color.cpp  Display.cpp
Spark/Spark/src/Core/Renderer/: ElementBuffer.cpp  IndexBuffer.cpp  Renderer.cpp  VertexArray.cpp  VertexBuffer.cpp
Spark/Spark/src/Core/Utilities/: Shader.cpp  ShaderUtility.cpp
Spark/include/: Color.h  IndexBuffer.h  OpenGLError.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
Spark/resources/shaders/: defaultShader.vertex
Spark/src/: Main.cpp
Spark/src/Core/Renderer/: IndexBuffer.cpp  Renderer.cpp  VertexBuffer.cpp
Spark/src/Core/Utilities/: OpenGLError.cpp  Shader.cpp
